# chess

./: README.md  pyproject.toml
src/: config.py
src/game/: Game.py  gui.py
src/pieces/: Bishop.py  King.py  Knight.py  Pawn.py  Piece.py  Queen.py  Rook.py
src/utils/: constants.py  utils.py
